--- a/styles.css
+++ b/styles.css
@@ -180,10 +180,9 @@ p{
     background-color: #F7F7F7;
     padding: 15px 64px;
     color: #1D1C17;
-    margin-top: 60px;
+    margin: 60px 15px 40px;
     border-radius: 25px;
     border: 0;
-    margin-right: 30px;
 }
 
 .foot{
@@ -285,4 +284,113 @@ p{
         height: 25px;
     }
    
+}
+
+/* IPAD DIMENSIONS */
+
+@media (device-width: 820px) and (device-height: 1180px) , (device-width: 768px) and (device-height: 1024px) {
+    
+    .navbar{
+        height: 60px;
+    }
+
+    ul{
+        gap: 30px;
+    }
+
+    .navbar .logo{
+        font-size:larger;
+    }
+
+    .navbar a{
+        font-size: 16px;
+    }
+
+    .header{
+        min-height: 93vh;
+    }
+
+    .header h1{
+        font-size: 4rem;
+        line-height: 1.3;
+    }
+
+    .header video{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        max-width: 650px;
+    }
+    .header .container{
+        flex-direction: column-reverse;
+        padding-top: 20px;
+        text-align: center;
+    }
+
+    .header .container button {
+        padding: 18px 35px; 
+        margin-top: 60px;
+    }
+
+    p{
+        font-size: 1.3rem;
+    }
+    
+    /* .boxes .container{
+        display: block;
+        text-align: center;
+    } */
+
+    .boxes{
+        min-height: 33vh;
+    }
+    .boxes p{
+        font-size: 1rem;
+    }
+    .box .pics{
+        max-width: 140px;
+    }
+
+    .boxes h2 , .testimonial h2{
+        font-size: xx-large;
+    }
+
+    .box p{
+        margin: 5px 0 20px;
+    }
+
+    .testimonial{
+        min-height: 33vh;
+    }
+    .testimonial h3{
+        padding-top: 40;
+        padding-bottom: 30px;
+        font-size: 1.2rem;
+    }
+
+    .contact .container{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    
+    }
+
+    .contact{
+        min-height: 33vh;
+    }
+
+    .contact h1{
+        font-size: 2.2rem;
+        margin-top: 130px;
+    }
+
+    .contact button{
+        padding: 8px 16px;
+        margin-right: 0;
+        margin: 60px 10px 0;
+    }
+
+    .foot{
+        font-size: 0.7rem;
+        height: 25px;
+    }
+
 }
